--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>WorkOrder-Work Order Layout</members>
-        <name>Layout</name>
+        <members>Custom_Settings_1__c.Field_1__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>Custom_Settings_1__c</members>
+        <name>CustomObject</name>
     </types>
     <version>63.0</version>
 </Package>
