--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.scm.disabled=true
-sonar.exclusions=**/generated/**,**/test/**,**/Dockerfile,**/*.dockerignore,**/docker/**,**/containers/**,*/cloudformation/**,**/cfn/**,**/templates/**,**/*.cfn.yaml,**/*.template.yaml,**/cf-*.yaml
+sonar.exclusions=**/generated/**,**/test/**,**/Dockerfile,**/*.dockerignore,**/docker/**,**/containers/**,*/cloudformation/**,**/cfn/**,**/templates/**,**/*.cfn.yaml,**/*.template.yaml,**/cf-*.yaml,**/node_modules/**,**/*.spec.ts
