--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>CommonPrefix</members>
-        <members>CommonPrefix_1</members>
-        <members>CommonPrefix_2</members>
-        <name>PermissionSet</name>
+        <members>kompalDec21__c</members>
+        <name>CustomObject</name>
     </types>
-    <version>63.0</version>
+    <version>64.0</version>
 </Package>
