--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>kompalDec21__c</members>
-        <name>CustomObject</name>
+        <members>Calc</members>
+        <name>ApexClass</name>
     </types>
     <version>64.0</version>
 </Package>
