--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Parent</members>
-        <members>Parent/Child</members>
-        <members>Parent/Child/cPwbhMCeUfRxQfpAcfEVkOaryIGpEl</members>
-        <members>Parent/Child/sTgglhuwQAeUezNOiVrxDTHzjipVbT</members>
-        <name>Dashboard</name>
+        <members>MyBigObject__b.Name__c</members>
+        <members>MyBigObject__b.Url__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>MyBigObject__b</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>MyBigObject__b.NameIdx</members>
+        <name>Index</name>
     </types>
     <version>64.0</version>
 </Package>
