--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Parent</members>
-        <members>Parent/Child</members>
-        <members>Parent/Child/cPwbhMCeUfRxQfpAcfEVkOaryIGpEl</members>
-        <members>Parent/Child/sTgglhuwQAeUezNOiVrxDTHzjipVbT</members>
-        <name>Dashboard</name>
+        <members>CopaEmails</members>
+        <members>CopaEmails/BDPlanRightAdvice_1755496503135</members>
+        <members>CopaEmails/BDTransitionSolutions_1755496526935</members>
+        <members>CopaEmails/PlanRightAdvice_1755496486565</members>
+        <members>CopaEmails/TransitionSolutions_1755496517175</members>
+        <name>EmailTemplate</name>
     </types>
     <version>64.0</version>
 </Package>
