--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountService1</members>
-        <members>AccountServiceTest1</members>
-        <name>ApexClass</name>
+        <members>Standard User Clone</members>
+        <name>Profile</name>
     </types>
     <version>64.0</version>
 </Package>
