--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Standard User Clone</members>
-        <name>Profile</name>
+        <members>demoComponent</members>
+        <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>Standard User Clone</members>
+        <members>Standard User - Viewer</members>
         <name>Profile</name>
     </types>
     <version>64.0</version>
