--- a/package.xml
+++ b/package.xml
@@ -4,5 +4,9 @@
         <members>puppet</members>
         <name>LightningComponentBundle</name>
     </types>
+    <types>
+        <members>CMT Test Profile</members>
+        <name>Profile</name>
+    </types>
     <version>64.0</version>
 </Package>
