--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>puppet</members>
-        <name>LightningComponentBundle</name>
+        <members>FancyLabel</members>
+        <name>CustomLabel</name>
+    </types>
+    <types>
+        <members>es</members>
+        <members>fr</members>
+        <members>it</members>
+        <members>zh_TW</members>
+        <name>Translations</name>
     </types>
     <version>64.0</version>
 </Package>
