--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Minimum Access Profile - 1</members>
-        <name>Profile</name>
+        <members>Account.Description</members>
+        <members>Account.ParentId</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>MyExNamedCredential</members>
+        <name>ExternalCredential</name>
+    </types>
+    <types>
+        <members>PermissionSet_US0615688</members>
+        <name>PermissionSet</name>
     </types>
     <version>64.0</version>
 </Package>
