--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Minimum Access Profile - 1</members>
-        <name>Profile</name>
+        <members>Menu_1</members>
+        <members>SFDC_Default_Navigation_Customer_Service</members>
+        <members>SFDC_Default_Navigation_Vijay_Digital</members>
+        <members>SFDC_Default_Navigation_kompalDigitalExperienceBundle</members>
+        <name>NavigationMenu</name>
     </types>
-    <version>64.0</version>
+    <version>65.0</version>
 </Package>
