--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <types>
+        <members>MainFolder/SubFolder1</members>
+        <members>MainFolder/SubFolder2</members>
+        <members>MainFolder/SubFolder3</members>
+        <name>Report</name>
+    </types>
     <version>65.0</version>
 </Package>
