--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Minimum Access DLRS - Salesforce</members>
-        <members>Standard User - Viewer</members>
-        <name>Profile</name>
+        <members>AccountService</members>
+        <members>AccountServiceTest1</members>
+        <name>ApexClass</name>
     </types>
     <version>65.0</version>
 </Package>
