--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Minimum Access Profile - 1</members>
-        <name>Profile</name>
+        <members>AccountService</members>
+        <members>AccountServiceTest1</members>
+        <members>kompal1</members>
+        <name>ApexClass</name>
     </types>
-    <version>64.0</version>
+    <types>
+        <members>kompalAP</members>
+        <name>ApexPage</name>
+    </types>
+    <version>65.0</version>
 </Package>
