--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AccountService</members>
-        <members>AccountServiceTest1</members>
-        <members>kompal1</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>kompalAP</members>
-        <name>ApexPage</name>
+        <members>UserAlt-User Profile Layout</members>
+        <name>Layout</name>
     </types>
     <version>65.0</version>
 </Package>
