--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ColombiaReports</members>
-        <members>ColombiaReports/BI_Terceros_completes_Cuentas_KXO</members>
-        <members>ColombiaReports/Visitas_a_pacientes_productividad_1wy</members>
-        <members>PanamaReports</members>
-        <members>PanamaReports/BI_Terceros_completos_Cuentas_CwA</members>
-        <members>RepublicaDominicanaReports</members>
-        <members>RepublicaDominicanaReports/Eventos_Adversos_Dw2</members>
-        <name>Report</name>
+        <members>vijay entitlement process</members>
+        <name>EntitlementProcess</name>
     </types>
     <version>65.0</version>
 </Package>
