--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>ColombiaReports</members>
-        <members>ColombiaReports/BI_Terceros_completes_Cuentas_KXO</members>
-        <members>ColombiaReports/Visitas_a_pacientes_productividad_1wy</members>
-        <members>PanamaReports</members>
-        <members>PanamaReports/BI_Terceros_completos_Cuentas_CwA</members>
-        <members>RepublicaDominicanaReports</members>
-        <members>RepublicaDominicanaReports/Eventos_Adversos_Dw2</members>
-        <name>Report</name>
+        <members>MyDataModel__dlm.DataSourceObject__c</members>
+        <members>MyDataModel__dlm.DataSource__c</members>
+        <members>MyDataModel__dlm.Id__c</members>
+        <members>MyDataModel__dlm.InternalOrganization__c</members>
+        <members>MyDataModel__dlm.KQ_Id__c</members>
+        <members>MyDataModel__dlm.Name__c</members>
+        <name>CustomField</name>
     </types>
     <version>65.0</version>
 </Package>
