--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyDataModel__dlm</members>
-        <name>CustomObject</name>
+        <members>BusinessStatus</members>
+        <members>ComplianceGroup</members>
+        <members>DataSensitivity</members>
+        <name>StandardValueSet</name>
     </types>
     <version>65.0</version>
 </Package>
