--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>MyDataModel__dlm</members>
+        <members>CCHCustom__c.Author__c</members>
+        <name>CustomField</name>
+    </types>
+    <types>
+        <members>CCHCustom__c</members>
         <name>CustomObject</name>
     </types>
     <version>65.0</version>
